1.5-1  2009-07-08
       - Further clean-ups of code, eliminating debuggin code, etc.
       - More testing, including very large files with Wavi.
       - Changes from 1.3-12 up are large enough to warrant
         increase in minor number!

1.3-14 2009-06-08
       - Changes in plots to make them faster; genomewide off by default,
       JS off by default, etc. And minimize usage of "environment" 
       and minimal function calls.

1.3-13 2009-05-26
       - Added HaarSeg.
       - snapCGH as of v. 1.12 has a NAMESPACE and fit.model is not exported
         (even if documented). But now BioHMM does not work because of a
	 bug in snapCGH (see BioC email list, 2009-05-12).

1.3-12 2009-05-13
       - Allow usage with DNAcopy 1.18.0 and 1.19.0
       - Fixed original bug in snapCGH for ansari in mergeLevels

1.3-11 2009-01-29
       - Better information on help about mapping to -1/0/1
       - Colors is a user passed parameter
       - Production of figures with html and javascript: optional
       - Production of superimposed figures: optional

1.3-10
       - Adapted error checking functions to usage with server.
       - Allow usage with DNAcopy 1.17.1 (which now uses a NAMESPACE)
       - No WARNINGS under R-devel for \code in help files.
       - Missing values caught early on
       - Fix in SegmentPlotWrite when mergeSegs = FALSE
       - Crashes in some figures when chromosomes had a single observation.

1.3-9	2008-10-27
	- Changed call to changepoints of DNAcopy to allow usage with
	v. 1.17.0 and 1.16.0 of DNAcopy. (First noticed by Sean Davis,
	email 2008-10-07; later by Jian Li, email 2008-10-25).

1.3-8	2008-10-03
	- I finally included Henrik's suggestion for having GLAD
	as suggested.

1.3-7	2008-04-30
	- Changed call to changepoints (DNAcopy) to adapt to DNAcopy
	v. 1.13-3. 
	- Minor documentation fixes
	- Minor change to mpiInit (less annoying behavior).

1.3-6	2008-01-24
	- Bugs on sending to PaLS fixed.